# Dashboard

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  Taskfile.yml  dashboard_master_spec_v4.38.md  dashboard_master_spec_v4.46.md  pyproject.toml
backend/app/: brief_dedupe.py  db.py  main.py  models.py  settings.py
backend/app/routes/: ai_codex.py  blocked_items.py  brief_suggestions.py  collector_health.py  daily.py  projects.py  quick_captures.py  serializers.py  top_items.py
backend/app/services/: top_items.py  woodcraft_brief.py
backend/collectors/: codex_auth.py  codex_usage_mapper.py  collect_codex_live_usage.py
backend/db/: schema.sql
backend/db/migrations/: phase_2_7_top_items.sql
backend/tests/: test_ai_codex_route.py  test_brief_suggestions.py  test_codex_auth.py  test_codex_collector.py  test_codex_usage_mapper.py  test_db.py  test_phase2_routes.py  test_phase2_schema.py  test_top3_priority_controls.py
backend/tests/fixtures/: fake_codex_identity.json  fake_wham_usage.json  woodcraft_brief_latest.json
docs/: dashboard_master_spec_v4.41.md  dashboard_master_spec_v4.52.md  decisions.md  handoff.md  phase1_codex_usage_pipeline_plan.md  phase1_quick_start.md  phase2_implementation_plan.md  runbook.md
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: ActiveProjectsCard.tsx  BlockedReviewCard.tsx  CodexUsageCard.tsx  CollectorHealthCard.tsx  DailyDashboard.tsx  DashboardCard.tsx  DraggableDashboardGrid.tsx  QuickCaptureCard.tsx  (+1 more)
scripts/: dashboard.ps1
(+5 files in other folders)
